Configuring for vercel connection